--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ button {
 /* Border of the buttons */
 
 .border {
-    border-bottom: 2px solid #090909;
+    border-bottom: 2px solid transparent;
     transition: border-bottom 700ms;
 }
 
@@ -64,6 +64,7 @@ button {
     color: #000000;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 22px;
+    padding: 6px;
 }
 
 
@@ -84,4 +85,91 @@ h1 {
     border: solid 2px white;
     width: auto;
     background-color: #090909;
+    height: auto;
 }
+
+
+/* Icons style */
+
+#icons {
+    margin-top: 2em;
+    display: inline-grid;
+    grid-template-columns: 3em 3em 3em 3em 3em;
+    place-items: center;
+}
+
+i {
+    color: #ffffff;
+    font-size: 2em;
+    cursor: pointer;
+    opacity: 0.3;
+}
+
+/* Style at hover */
+
+/* Instagram icon */
+.fa-instagram:hover {
+    opacity: 1;
+    border-radius: 50%;
+    background: 
+        linear-gradient(
+        #6559ca, 
+        #bc318f 30%, 
+        #e33f5f 50%, 
+        #f77638 70%, 
+        #fec66d 
+        100%);
+}
+
+/* Twitter icon */
+.fa-twitter:hover {
+    opacity: 1;
+    color: #1DA1F2;
+}
+
+/* YT icon */
+.fa-youtube:hover {
+    opacity: 1;
+    color: #FF0000;
+        /* To make the background white */
+    background-image: url(imagenes,clips/white.jpg);
+    background-size: 1em;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+
+/* Github icon */
+.fa-github:hover {
+    opacity: 1;
+    color: #000000;
+    background-color: #ffffff;
+    border-radius: 50%;
+}
+
+
+a {
+    text-decoration: none; /* To remove  the underline of the link*/
+    position: relative;
+    display: block;
+}
+
+/* Theme button style */
+#changeThemeButton {
+    font-size: 1em;
+    border-radius: 50%;
+}
+
+.fa-adjust:hover {
+    opacity: 1;
+    color: #ffffff;
+}
+
+
+/* Hover tooltips */
+/* span {
+    position: absolute;
+    top: 100%;
+    right: 0px;
+    background-color: white;
+} */
