--- a/style.css
+++ b/style.css
@@ -1,6 +1,20 @@
 body {
     background: linear-gradient(to right, #000000 , #000000 ,#0044ff);
     margin: 0;
+    animation-name: appear;
+    animation-duration: 5s;
+}
+
+
+/* Animation when the web is opened */
+@keyframes appear{
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 100%;
+    }
 }
 
 main {
@@ -33,7 +47,7 @@ button {
 }
 
 
-/* Border of the buttons */
+/* Border-bottom of the buttons */
 
 .border {
     border-bottom: 2px solid transparent;
@@ -54,9 +68,10 @@ button {
 
 #games {
     position: absolute;
-    display: none; /* block */
+    display: block; /* none */
     z-index: 1;
     background: #ffffff;
+    border-radius: 0.3em;
 }
 
 .gamesButton {
@@ -79,13 +94,31 @@ h1 {
 }
 
 
+
 /* Content style */
 
 #content {
-    border: solid 2px white;
-    width: auto;
+    border: solid 2px transparent;
     background-color: #090909;
     height: auto;
+    width: 0%;
+    /* Underline effect */
+    animation-name: boost;
+    animation-duration: 2s;
+    animation-delay: 2s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes boost {
+    0% {
+        width: 0%;
+        border: solid 2px #ffffff;
+    }
+
+    100% {
+        width: 100%;
+        border: solid 2px white;
+    }
 }
 
 
@@ -168,6 +201,7 @@ a {
 .tooltip {
     position: relative;
     display: block;
+    border-radius: 50%;
 }
 
 /* Tw, YT, Git tooltip */
@@ -191,6 +225,8 @@ span#insta {
     margin-left: -24px;
 }
 
+
+/* Tooltips animation */
 .tooltip:hover span {
     visibility: visible;
     animation-name: tooltipAppear;
@@ -199,13 +235,45 @@ span#insta {
 }
 
 @keyframes tooltipAppear {
-    0% {
+    from {
         top: 60%;
         opacity: 0%;
     }
 
-    100% {
+    to {
         top: 100%;
+        opacity: 100%;
+    }
+}
+
+
+
+/* Theme button tooltip */
+span#theme {
+    margin-left: 40px;
+    width: 200px;
+    top: -3px;
+}
+
+
+.tooltip:hover span#theme {
+    margin-left: 40px;
+    width: 200px;
+    top: -3px;
+    animation-name: themeTooltipAppear;
+    animation-duration: 800ms;
+    animation-fill-mode: forwards;
+}
+
+/* Them button tooltip animation */
+@keyframes themeTooltipAppear {
+    from {
+        margin-left: 30px;
+        opacity: 0;
+    }
+
+    to {
+        margin-left: 40px;
         opacity: 100%;
     }
 }
