--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ h1 {
     border: solid 2px transparent;
     background-color: #090909;
     height: auto;
-    width: 0%;
+    width: 0;
     /* Underline effect */
     animation-name: boost;
     animation-duration: 2s;
