--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ main {
 #header {
     padding: 3px;
     padding-top: 0;
-    background: linear-gradient(to right, rgb(255, 0, 131) , rgb(0, 124, 255));
+    background: linear-gradient(to right, rgb(255, 0, 131) , rgb(0, 124, 255))
 }
 
 header {
@@ -65,7 +65,7 @@ button:hover .border {
     display: inline-block;
 }
 
-.games {
+.gamesDropdown {
     position: absolute;
     display: none;
     z-index: 1;
@@ -146,7 +146,6 @@ h1 {
     font-family: "Audiowide", sans-serif;
     font-style: italic;
     font-size: 5em;
-    /* Title animation */
     animation-name: titleSlide;
     animation-duration: 2s;
     animation-fill-mode: forwards;
@@ -165,7 +164,7 @@ h1 {
 
 /* Content style */
 #content {
-    padding: 2px;
+    padding: 3px;
     /* Underline effect */
     animation-name: boost;
     animation-duration: 2s;
@@ -185,6 +184,10 @@ h1 {
     }
 }
 
+#content2 {
+    background-color: rgb(37, 37, 40);
+    height: 50px;
+}
 
 /* Icons style */
 #icons {
