--- a/style/style.css
+++ b/style/style.css
@@ -16,11 +16,13 @@ body {
     }
 }
 
+/*Header*/
 main {
     margin: 0 10%;
 }
 
 #header {
+	/*Border of the header*/
     padding: 3px;
     padding-top: 0;
     background: linear-gradient(135deg, rgb(255, 0, 131) , rgb(0, 124, 255))
@@ -45,7 +47,6 @@ button {
     font-family: monospace;
 }
 
-
 /* Border-bottom of the buttons */
 .border {
     height: 1px;
@@ -55,6 +56,7 @@ button {
 }
 
 button:hover .border {
+	/*To make border-bottom appears when over*/
     opacity: 1;
 }
 
