--- a/style/style.css
+++ b/style/style.css
@@ -233,8 +233,7 @@ i {
 .fa-youtube:hover {
     opacity: 1;
     color: #FF0000;
-    /* To make the background white */
-    background-image: url(imagenes,clips/white.jpg);
+    background-image: url(imagenes,clips/white.jpg); /* To make the background white */
     background-size: 1em;
     background-repeat: no-repeat;
     background-position: center;
