Changed the games menu color & the text color

--- a/style/style.css
+++ b/style/style.css
@@ -75,7 +75,7 @@ button:hover .border {
     position: absolute;
     display: none;
     z-index: 1;
-    background: rgb(255, 255, 255);
+    background: linear-gradient(to right, #5652d5, #037bfe);
     border-bottom-left-radius: 0.3em;
     border-bottom-right-radius: 0.3em;
     width: 100%; /* To make the dropdown width as wide as the dropdown button*/
@@ -88,7 +88,7 @@ button:hover .border {
 /* Style of games buttons */
 .gamesButton {
     border: none;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 21px;
     padding: 6px;
