Changed tooltip animation and games menu background-color

--- a/style/style.css
+++ b/style/style.css
@@ -75,7 +75,7 @@ button:hover .border {
     position: absolute;
     display: none;
     z-index: 1;
-    background: linear-gradient(to right, #5652d5, #037bfe);
+    background: linear-gradient(to right, #3761e4, #037bfe);
     border-bottom-left-radius: 0.3em;
     border-bottom-right-radius: 0.3em;
     width: 100%; /* To make the dropdown width as wide as the dropdown button*/
@@ -228,20 +228,16 @@ i {
     opacity: 0.3;
 }
 
-/* Gitlab icon */
-.fa-gitlab {
-    color: #fc6d27;
+/* Gitlab and Reddit icon */
+.fa-gitlab, .fa-reddit {
+    color: #ff4500;
 }
 
-/* Twitter icon */
-.fa-twitter {
-    color: #1DA1F2;
-}
 
 /* YT icon */
 .fa-youtube {
     color: #FF0000;
-    background-image: url(imagenes,clips/white.jpg); /*To make the background white*/
+    background-image: url(imagenes,clips/white.jpg); /* To make the background white */
     background-size: 1em;
     background-repeat: no-repeat;
     background-position: center;
@@ -250,71 +246,32 @@ i {
 /* Github icon */
 .fa-github {
     color: #ffffff;
-    border-radius: 50%;
 }
 
 /* Theme button style */
 #changeThemeButton {
     font-size: 1em;
-    border-radius: 50%;
-}
-
-.fa-adjust {
-    /* opacity: 1; */
     color: #ffffff;
 }
 
+
 /* Style at hover */
 
-.fa-twitter:hover, .fa-youtube:hover, .fa-gitlab:hover, .fa-github:hover, .fa-adjust:hover {
+.fa-reddit:hover, .fa-youtube:hover, .fa-gitlab:hover, .fa-github:hover, .fa-adjust:hover, .tooltip:hover span {
     opacity: 1;
 }
 
-a {
-    text-decoration: none; /* To remove  the underline of the link*/
-}
 
-
-/* Hover tooltips */
-.tooltip {
-    position: relative;
-    display: block;
-    border-radius: 50%;
-}
+/* Tooltips */
 
 /* Gitlab, Tw, YT, Git tooltip */
 span {
-    visibility: hidden;
-    transition: visibility 1ms;
-    opacity: 0;  /*For the animation*/
+    opacity: 0;
+    transform: translate(-25%, 10%); /*Center the tooltip*/
     transition: opacity 800ms;
     position: absolute;
     background: linear-gradient(to right, rgb(255, 0, 131) , rgb(0, 124, 255));    
     border-radius: 5%;
     color: #ffffff;
-    padding: 5px 5px;
-    text-align: center;
-    /*To center the tooltips in every browser*/
-    top: 50%;
-    left: -32%;
-    transform: translate(-50%, -50%)
-}
-
-/* Tooltips animation */
-.tooltip:hover span {
-    opacity: 1;
-    visibility: visible;
-    animation-name: tooltipAppear;
-    animation-duration: 800ms;
-    animation-fill-mode: forwards;
-}
-
-@keyframes tooltipAppear {
-    from {
-        transform: translate(0, 0);
-    }
-
-    to {
-        transform: translate(0, 70%);
-    }
+    padding: 4px 4px;
 }
