--- a/style/style.css
+++ b/style/style.css
@@ -217,8 +217,6 @@ p {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
-
-
 /* Icons style */
 
 /* Icons div */
@@ -233,40 +231,17 @@ i {
     font-size: 2em;
     cursor: pointer;
     opacity: 0.3;
-}
-
-/* Gitlab and Reddit icon */
-.fa-reddit {
-    background-color: #ffffff;
-    border-radius: 50%; /* To adjust the background */
-    color: #ff4500;
-}
-
-
-/* YT icon */
-.fa-youtube {
-    color: #FF0000;
-    background-image: url(imagenes,clips/white.jpg); /* To make the background white */
-    background-size: 1em;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-/* Github icon */
-.fa-github {
     color: #ffffff;
 }
 
 /* Theme button style */
 #changeThemeButton {
     font-size: 1em;
-    color: #ffffff;
 }
 
 
 /* Tooltips */
 
-/* Gitlab, Tw, YT, Git tooltip */
 span {
     visibility: hidden;
     opacity: 0;
@@ -283,7 +258,7 @@ span {
 
 /* Style at hover */
 
-.fa-reddit:hover, .fa-youtube:hover, .fa-github:hover, .fa-adjust:hover , .tooltip:hover span {
+.fa-twitter:hover, .fa-github:hover, .fa-adjust:hover , .tooltip:hover span {
     visibility: visible;
     opacity: 1;
 }
